src/test/ui/error-codes/E0507.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/E0507.rs:12:5
   |
LL |     x.borrow().nothing_is_true(); //~ ERROR E0507
   |     ^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
